--- a/panorama/CMakeLists.txt
+++ b/panorama/CMakeLists.txt
@@ -5,6 +5,8 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
+cmake_policy(SET CMP0063 NEW)
+
 add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_panorama\")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/importwizard
