Panorama: Support of Hugin >= 2015.0
 * New Hugin tool hugin_executor replacing pto2mk and make
 * Simplification of the Wizard code using QWizard mechanisms (finishes the migration to QWizard that wasn't completed)
 * Bugfixes here and there

--- a/panorama/CMakeLists.txt
+++ b/panorama/CMakeLists.txt
@@ -61,6 +61,7 @@ set(panorama_common_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/tasks/createmktask.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tasks/compilemksteptask.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tasks/compilemktask.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/tasks/huginexecutortask.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tasks/copyfilestask.cpp
    )
 
