--- a/advancedslideshow/CMakeLists.txt
+++ b/advancedslideshow/CMakeLists.txt
@@ -71,11 +71,11 @@ target_link_libraries(kipiplugin_advancedslideshow
                       KF5::KIOFileWidgets
                       KF5kipiplugins
 
-                      ${OPENGL_LIBRARIES}
+#                      ${OPENGL_LIBRARIES}
 
                       # For Linux only.
-                      ${X11_LIBRARIES}
-                      ${X11_Xrandr_LIB}
+#                      ${X11_LIBRARIES}
+#                      ${X11_Xrandr_LIB}
 )
 
 if(Phonon4Qt5_FOUND)
