--- a/advancedslideshow/CMakeLists.txt
+++ b/advancedslideshow/CMakeLists.txt
@@ -31,7 +31,7 @@ set(kipiplugin_advancedslideshow_PART_SRCS dialogs/captionpage.cpp
                                            widgets/presentation.cpp
 
                                            common/commoncontainer.cpp
-                                           common/slideshowloader.cpp
+                                           common/presentationloader.cpp
                                            common/kpsvgpixmaprenderer.cpp
 
                                            plugin/plugin_advancedslideshow.cpp
